--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy~=2.2.4
-pandas~=2.2.3
-matplotlib~=3.10.1
-scikit-learn~=1.6.1
-mlxtend~=0.23.4
-seaborn~=0.12.2
-plotly~=5.14.1
+graphviz
+matplotlib
+numpy (>=1.16.0)
+pandas (>=0.24)
+plotly
+scipy
+six
